<resources>
    <string name="app_name">Nirvana</string>
    <string name="intro">Here is your all-in-one travel companion for creating unforgettable journeys.</string>
    <string name="log_in">log in</string>
    <string name="or_sign_up">or sign up here</string>
    <string name="sign_up">sign up</string>
    <string name="already_account">already have an account?</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="no_account">no account yet?</string>
    <string name="save">save</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="change_your_password">change your password</string>
    <string name="menu">Menu</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="what_you_want">what do you want?</string>
    <string name="view_all">view all</string>
    <string name="eating">eating</string>
    <string name="shopping">shopping</string>
    <string name="sightseeing">sightseeing</string>
    <string name="skiing">skiing</string>
    <string name="description">description</string>
    <string name="set_location">set your location</string>
    <string name="allow_notification">allow notification</string>
    <string name="use_location">use location</string>
    <string name="log_out">log out</string>
</resources>