<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBEDDA"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="47dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="154dp"
        android:layout_height="156dp"
        android:elevation="10dp"
        android:src="@drawable/mountains"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="50dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#8ABDC8B7"
        android:elevation="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="292dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#8ABDC8B7"
        android:elevation="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="392dp" />

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:backgroundTint="#718C83"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="@string/sign_up"
        android:textColor="#BDC8B7"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="589dp" />

    <TextView
        android:id="@+id/already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_account"
        android:textColor="#BDC8B7"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="662dp" />


</androidx.constraintlayout.widget.ConstraintLayout>