<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBBD9B"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="53dp"
        android:fontFamily="@font/barlow_bold"
        android:text="@string/app_name"
        android:textColor="@color/headline"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="209dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="156dp"
        android:fontFamily="@font/barlow_medium"
        android:text="@string/intro"
        android:textColor="@color/dark_green"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/log_in_btn"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="260dp"
        android:backgroundTint="@color/light_beige"
        android:elevation="10dp"
        android:fontFamily="@font/barlow_medium"
        android:stateListAnimator="@null"
        android:text="@string/log_in"
        android:textColor="@color/light_green"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/barlow_medium"
        android:text="@string/or_sign_up"
        android:textColor="@color/light_beige"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_btn" />

    <ImageView
        android:id="@+id/start_img"
        android:layout_width="409dp"
        android:layout_height="372dp"
        android:src="@drawable/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>